<resources>
    <string name="app_name">Furman Now!</string>
    <string name="home_text">Home</string>
    <string name="athletics_text">Athletics</string>
    <string name="transportation_text">Transportation</string>
    <string name="dining_text">Dining</string>
    <string name="events_text">Events</string>
    <string name="phone_text">Contacts</string>
    <string name="health_safety_text">Health &amp; Safety</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hours_text">Hours</string>
    <string name="dates_text">Academic Dates</string>
    <string name="map_text">Campus Map</string>
    <string name="daily_hours_text">&#160;&#160;Daily Hours:</string>
    <string name="map_view_text">Map view </string>
    <string name="action_settings">Settings</string>
    <string name="regular_menu_text">&#160;&#160;Regular</string>
    <string name="menu_text">Menu:</string>
    <string name="hours_dining_text">Hours:</string>
    <string name="earle_special_text">For your very first appointment, you must call to schedule. After that, you can use MyChart.</string>
    <string name="syncdin_text">SyncDin</string>
    <string name="clps_text">CLPs</string>
    <string name="today_text">Today</string>
    <string name="tomorrow_text">Tomorrow</string>
    <string name="this_week_text">This Week</string>
    <string name="syncdin_link_text">Click here to see full list of syncDin Events</string>
    <string name="clp_link_text">Click here to see full list of CLP Events</string>
    <string name="calendar_text">Add to Calendar</string>
    <string name="results_text">&#160;&#160;Results</string>
    <string name="search_text">Search</string>
    <string name="no_data_search_text">No Data Found…</string>
    <string name="student_life_text_on">Student Life: on</string>
    <string name="registrar_text_on">Registrar: on</string>
    <string name="graduate_studies_text_on">Graduate Studies: on</string>
    <string name="housing_residence_text_on"><![CDATA[Housing & Residence Life: on]]></string>
    <string name="dining_services_text_on">Dining Services: on</string>
    <string name="parent_engagement_text_on">Furman Parent Engagement: on</string>
    <string name="student_life_text_off">Student Life: off</string>
    <string name="registrar_text_off">Registrar: off</string>
    <string name="graduate_studies_text_off">Graduate Studies: off</string>
    <string name="housing_residence_text_off"><![CDATA[Housing & Residence Life: off]]></string>
    <string name="dining_services_text_off">Dining Services: off</string>
    <string name="parent_engagement_text_off">Furman Parent Engagement: off</string>
    <string name="emergency_text">If you are in an emergency, dial 911!</string>
    <string name="back_text">Back</string>
    <string name="link_athletics_text">Click here to see full list of Athletic Events</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_fragment2">Map</string>
    <string name="results_text2">Results</string>
    <string name="style_json">

[
  {
    "featureType": "poi",
    "stylers": [
      { "visibility": "off" }
    ]
  }
]
    </string>
    <string name="saferide_running_text">Saferide: Running</string>
    <string name="saferide_not_running_text">Saferide: Inactive</string>
    <string name="walmart_running_text">Walmart: Running</string>
    <string name="walmart_not_running_text">Walmart: Inactive</string>
    <string name="trolley_running_text">Trolley: Running</string>
    <string name="trolley_not_running_text">Trolley: Inactive</string>
    <string name="bus_running_text">503 Bus: Running</string>
    <string name="bus_not_running_text">503 Bus: Inactive</string>
    <string name="no_data_text">This feature is not currently available</string>
    <string name="schedule_saferide_morning_text">Morning SafeRide: M–F from 7:30–11:30am</string>
    <string name="schedule_saferide_afternoon_text">Afternoon SafeRide: M–F from 1:00–4:00pm</string>
    <string name="schedule_saferide_evening_text">Evening SafeRide: All Week from 7:00pm-1:00am</string>
    <string name="schedule_walmart_text">Walmart Shuttle: Tuesday from 6:00–9:00pm</string>
    <string name="schedule_trolley_text">Downtown Trolley: Friday &amp; Saturday from 10:00pm-2:00am</string>
    <string name="order_online_text">Order Online</string>
    <string name="order_phone_text">Order by Phone</string>
    <string name="version_text">V 1.2</string>
    <string name="dismiss_text">Dismiss</string>
    <string name="credits1_text">Created by: Olivia Edwards, Boone Tison, Bryan Catron</string>
    <string name="credits2_text">with the support of the Furman Department of Computer Science</string>
    <string name="credits3_text">Report bugs to: furmannowapp@gmail.com</string>

</resources>