<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EventsSyncDINFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/halfScreenGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6" />

    <Button
        android:id="@+id/syncdinButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/syncdin_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/furman_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clpButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/clps_text"
        android:textAllCaps="false"
        android:textColor="@color/furman_purple"
        app:backgroundTint="@color/furman_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/furman_dark_gray" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todayList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/tomorrowText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayText"
        tools:context=".DiningDetailFragment"
        tools:listitem="@layout/fragment_events_syncdin" />

    <TextView
        android:id="@+id/todayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/today_text"
        android:textAllCaps="true"
        android:textColor="@color/furman_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/syncdinButton" />

    <TextView
        android:id="@+id/todayDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/today_text"
        android:textAllCaps="true"
        android:textColor="@color/furman_purple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/todayList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clpButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tomorrowList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/halfScreenGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomorrowText"
        tools:context=".DiningDetailFragment"
        tools:listitem="@layout/fragment_events_syncdin">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tomorrowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/tomorrow_text"
        android:textAllCaps="true"
        android:textColor="@color/furman_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/halfScreenGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayText" />

    <TextView
        android:id="@+id/tomorrowDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/tomorrow_text"
        android:textAllCaps="true"
        android:textColor="@color/furman_purple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/halfScreenGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayDateText" />

    <TextView
        android:id="@+id/thisweekText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/this_week_text"
        android:textAllCaps="true"
        android:textColor="@color/furman_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/halfScreenGuideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/thisweekList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/linkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thisweekText"
        tools:context=".DiningDetailFragment"
        tools:listitem="@layout/fragment_events_syncdin" />

    <Button
        android:id="@+id/linkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syncdin_link_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>